syntax = "proto3";

package auth;

option go_package="github.com/bovinxx/auth-servie/api/auth_v1;auth_v1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
    rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse);
};

message LoginRequest {
    string username = 1;
    string password = 2;
    bool is_admin = 3;
};

message LoginResponse {
    string refresh_token = 1;
};

message GetRefreshTokenRequest {
    string old_refresh_token = 1;
};

message GetRefreshTokenResponse {
    string refresh_token = 1;
};

message GetAccessTokenRequest {
    string refresh_token = 1;
};

message GetAccessTokenResponse {
    string access_token = 1;
};